# pollen-adaptive-universe

./: .env.example  .gitignore  .replit  .vercelignore  ABSOLUTE_ZERO_REASONER_GUIDE.md  AI_FEATURES_DOCUMENTATION.md  BACKEND_DEPLOYMENT.md  BUGS_AND_ISSUES.md  DEBUGGING_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PLATFORM_ANALYSIS_REPORT.md  PLATFORM_GUIDE.md  POLLEN_AI_DOCUMENTATION.md  POLLEN_AI_INTEGRATION_GUIDE.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_UPGRADE_GUIDE.md  PYTHON_INTEGRATION_README.md  README.md  app.py  index.html  jsconfig.json  local-backend.cjs  package-lock.json  package.json  pollen_ai_backend.py  pollen_ai_optimized.py  proxy-server.cjs  pyproject.toml  replit.md  requirements.txt  start-app.cjs  start.cjs  tailwind.config.ts  vercel.json  vite.config.js  vite.config.ts
api/: index.py
attached_assets/: Pasted--Comprehensive-Plan-for-Implementing-the-User-s-Vision-1-Feed-Explore-News-Upcoming-E-1761771840050_1761771840051.txt  Pasted--Optimizing-Pollen-AI-for-Absolute-Zero-Reasoner-Style-To-align-the-Pollen-AI-model-with-the--1760494634370_1760494634370.txt  Pasted--Revised-Prompt-for-Replit-markdown-Replit-Prompt-for-Pollen-AI-Integration-in-a-Web-App--1760905775194_1760905775195.txt  Pasted--Revised-Prompt-for-Replit-markdown-Replit-Prompt-for-Pollen-AI-Integration-in-a-Web-App--1760906237171_1760906237172.txt  Pasted-Here-is-a-detailed-description-of-the-design-that-you-can-use-to-recreate-it-into-a-web-app-with-a-m-1759946273080_1759946273080.txt  (+24 more)
backend/: README.md  database.py  main.py  (+2 more)
(+465 files in other folders)
